--- a/style.css
+++ b/style.css
@@ -130,4 +130,16 @@ color: var(--branco-principal);
 .container__botao:hover{
     background-color:var(--botao--azul--efeito)
 }
+@media screen and (max-width: 711px){
+    .container{
+        display: block;
+        background-image:none;
+    }
+    .container__imagem{
+        width: 50vw;
+    }
+    .container__caixa{
+        margin: 2em 2em;
+    }
+}
 
